[SPOT-4868] Support multiple partition keys in Dynamo